# opengv

./: .gitignore  .gitmodules  .travis.yml  AbsoluteAdapterBase_8hpp.html  AbsoluteAdapterBase_8hpp_source.html  AbsoluteMultiAdapterBase_8hpp.html  AbsoluteMultiAdapterBase_8hpp_source.html  AbsolutePoseSacProblem_8hpp.html  AbsolutePoseSacProblem_8hpp_source.html  CMakeLists.txt  CentralAbsoluteAdapter_8hpp.html  CentralAbsoluteAdapter_8hpp_source.html  CentralRelativeAdapter_8hpp.html  CentralRelativeAdapter_8hpp_source.html  CentralRelativeMultiAdapter_8hpp.html  CentralRelativeMultiAdapter_8hpp_source.html  CentralRelativePoseSacProblem_8hpp.html  CentralRelativePoseSacProblem_8hpp_source.html  CentralRelativeWeightingAdapter_8hpp.html  CentralRelativeWeightingAdapter_8hpp_source.html  Doxyfile  EigensolverSacProblem_8hpp.html  EigensolverSacProblem_8hpp_source.html  Indices_8hpp.html  Indices_8hpp_source.html  LICENSE  License.txt  MACentralAbsolute_8hpp.html  MACentralAbsolute_8hpp_source.html  MACentralRelative_8hpp.html  MACentralRelative_8hpp_source.html  MANoncentralAbsolute_8hpp.html  MANoncentralAbsolute_8hpp_source.html  MANoncentralRelativeMulti_8hpp.html  MANoncentralRelativeMulti_8hpp_source.html  MANoncentralRelative_8hpp.html  MANoncentralRelative_8hpp_source.html  MAPointCloud_8hpp.html  MAPointCloud_8hpp_source.html  MultiCentralRelativePoseSacProblem_8hpp.html  (+356 more)
doc/addons/: 01_installation.dox  02_how_to_use.dox  03_how_to_contribute.dox  03_matlab.dox  04_contact.dox  04_how_to_contribute.dox  05_references.dox  06_references.dox  mainpage.dox
doc/addons/images/: absolute_central.dia  absolute_central.eps  absolute_noncentral.dia  absolute_noncentral.eps  central.dia  central.eps  multi_viewpoint.dia  multi_viewpoint.eps  noncentral.dia  noncentral.eps  nonoverlapping.dia  nonoverlapping.eps  point_cloud.dia  point_cloud.eps  relative_central.dia  relative_central.eps  relative_noncentral.dia  relative_noncentral.eps  reprojectionError.dia  reprojectionError.eps  triangulation_central.dia  triangulation_central.eps  triangulation_noncentral.dia  triangulation_noncentral.eps
include/opengv/: Indices.hpp  OptimizationFunctor.hpp  types.hpp
include/opengv/absolute_pose/: AbsoluteAdapterBase.hpp  AbsoluteMultiAdapterBase.hpp  CentralAbsoluteAdapter.hpp  MACentralAbsolute.hpp  MANoncentralAbsolute.hpp  NoncentralAbsoluteAdapter.hpp  NoncentralAbsoluteMultiAdapter.hpp  methods.hpp
include/opengv/math/: Sturm.hpp  arun.hpp  rodrigues.hpp  roots.hpp
include/opengv/point_cloud/: MAPointCloud.hpp  PointCloudAdapter.hpp
include/opengv/relative_pose/: CentralRelativeAdapter.hpp  CentralRelativeMultiAdapter.hpp  CentralRelativeWeightingAdapter.hpp  MACentralRelative.hpp  MANoncentralRelative.hpp  NoncentralRelativeAdapter.hpp  NoncentralRelativeMultiAdapter.hpp  RelativeMultiAdapterBase.hpp  methods.hpp
include/opengv/sac/: MultiRansac.hpp  MultiSampleConsensus.hpp  MultiSampleConsensusProblem.hpp  Ransac.hpp  SampleConsensus.hpp  SampleConsensusProblem.hpp
matlab/: benchmark_absolute_pose.m  benchmark_absolute_pose_cov.m  benchmark_absolute_pose_execution_times.m  benchmark_absolute_pose_noncentral.m  benchmark_absolute_pose_noncentral_execution_timing.m  benchmark_relative_pose.m  benchmark_relative_pose_execution_times.m  benchmark_relative_pose_noncentral.m  benchmark_relative_pose_noncentral2.m  benchmark_relative_pose_noncentral_execution_times.m  benchmark_relative_pose_noncentral_execution_times2.m  compile_ogv_matlab_wrappers.m  make_mex.sh  opengv.cpp  opengv_donotuse.cpp  opengv_experimental1.cpp  opengv_experimental2.cpp  plot_arun_error.m  plot_expected_iterations.m  plot_ge_costfunction.m  ransac_experiment.m  ransac_experiment2.m  ransac_experiment3.m  ransac_test.m
matlab/helpers/: addNoise.m  cayley2rot.m  create2D2DExperiment.m  create2D2DOmniExperiment.m  create2D3DExperiment.m  create2D3DExperimentCov1Cam.m  createMulti2D2DExperiment.m  createMulti2D2DOmniExperiment.m  evaluateRotationError.m  evaluateTransformationError.m  generateBoundedR.m  generateRandomR.m  perturb.m  rodrigues.m  rot2cayley.m  transformEssentials.m
modules/: FindEigen.cmake  FindNumPy.cmake
python/: CMakeLists.txt  pyopengv.cpp  tests.py  types.hpp
python_pybind/: CMakeLists.txt  pyopengv.cpp  tests.py  types.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6a.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_7e.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_61.js  classes_63.js  (+96 more)
src/absolute_pose/: CentralAbsoluteAdapter.cpp  MACentralAbsolute.cpp  MANoncentralAbsolute.cpp  NoncentralAbsoluteAdapter.cpp  NoncentralAbsoluteMultiAdapter.cpp  methods.cpp
src/math/: Sturm.cpp  arun.cpp  rodrigues.cpp  roots.cpp
src/point_cloud/: MAPointCloud.cpp  PointCloudAdapter.cpp  methods.cpp
src/relative_pose/: CentralRelativeAdapter.cpp  CentralRelativeMultiAdapter.cpp  CentralRelativeWeightingAdapter.cpp  MACentralRelative.cpp  MANoncentralRelative.cpp  MANoncentralRelativeMulti.cpp  NoncentralRelativeAdapter.cpp  NoncentralRelativeMultiAdapter.cpp  methods.cpp
test/: experiment_helpers.cpp  experiment_helpers.hpp  random_generators.cpp  random_generators.hpp  test_Sturm.cpp  test_absolute_pose.cpp  test_absolute_pose_sac.cpp  test_eigensolver.cpp  test_eigensolver_sac.cpp  test_multi_noncentral_absolute_pose_sac.cpp  test_multi_noncentral_relative_pose_sac.cpp  test_noncentral_absolute_pose.cpp  test_noncentral_absolute_pose_sac.cpp  test_noncentral_relative_pose.cpp  test_noncentral_relative_pose_sac.cpp  test_point_cloud.cpp  test_point_cloud_sac.cpp  test_relative_pose.cpp  test_relative_pose_rotationOnly.cpp  test_relative_pose_rotationOnly_sac.cpp  test_relative_pose_sac.cpp  test_triangulation.cpp  time_measurement.cpp  time_measurement.hpp
(+47 files in other folders)
